// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<label
  className="container uui-checkbox-container root size-18 mode-form -clickable"
>
  <div
    className="uui-checkbox"
    tabIndex={-1}
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox should be rendered correctly 2`] = `
<label
  className="container uui-checkbox-container root size-18 mode-cell -clickable"
>
  <div
    className="uui-checkbox"
    tabIndex={-1}
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </div>
</label>
`;
